language/move-lang/tests/move_check/naming/unbound_builtin.move
module 0x8675309::M {
    fun foo() {
        global_borrow();
        release<u64>();
        sudo(false);
    }
}
